--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mainloop.js": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
