--- a/package.json
+++ b/package.json
@@ -1,43 +1,25 @@
 {
   "name": "dylandevs",
-  "version": "1.0.0",
-  "description": "Personal website",
+  "version": "0.0.0",
+  "private": "true",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config ./config/webpack.prod.js",
-    "start": "webpack serve --config ./config/webpack.dev.js"
+    "build": "vite build",
+    "start": "vite serve"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
     "lodash": "^4.17.21",
     "mainloop.js": "^1.0.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
-    "regenerator-runtime": "^0.13.9"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^5.2.7",
-    "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^1.6.2",
-    "node-sass": "^5.0.0",
-    "path": "^0.12.7",
-    "sass-loader": "^10.2.1",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^3.11.3",
-    "webpack-merge": "^5.3.0"
+    "@vitejs/plugin-react": "^4.0.4",
+    "vite": "^4.4.9"
   }
 }
